more description in demo

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DrakeVisualizer.jl\n",
+    "This notebook demonstrates interacting with the Drake Visualizer app from Julia. To run it, you'll need to:\n",
+    "\n",
+    "* install Drake: http://drake.mit.edu/\n",
+    "* add the Drake lcmtypes to your python path: \n",
+    "    * `export PYTHONPATH=\"$PYTHONPATH:/path/to/drake-distro/build/lib/python2.7/dist-packages\"`\n",
+    "* install the DrakeVisualizer.jl package:\n",
+    "    * `Pkg.clone(\"https://github.com/rdeits/DrakeVisualizer.jl.git\")`\n",
+    "* launch the `drake-visualizer` app:\n",
+    "    * `cd /path/to/drake-distro/build/bin`\n",
+    "    * `./drake-visualizer`\n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -282,6 +300,8 @@
     }
    ],
    "source": [
+    "# Activate the DrakeVisualizer package, and import some other \n",
+    "# useful functions\n",
     "using DrakeVisualizer\n",
     "import GeometryTypes: HyperRectangle, Vec, HomogenousMesh, SignedDistanceField\n",
     "import Meshing\n",
@@ -309,6 +329,7 @@
     }
    ],
    "source": [
+    "# First, we'll create a simple geometric object\n",
     "box = HyperRectangle(Vec(0.,0,0), Vec(1.,1,1))"
    ]
   },
@@ -320,6 +341,11 @@
    },
    "outputs": [],
    "source": [
+    "# load() causes the viewer to spawn a geometry or a set of geometries. \n",
+    "# It returns a VisualizerModel, which includes all the information\n",
+    "# about that loaded geometry. \n",
+    "# Note that the model is initially loaded in the zero configuration \n",
+    "# (that is, its position and rotation are all zeros)\n",
     "model = load(box);"
    ]
   },
@@ -331,6 +357,9 @@
    },
    "outputs": [],
    "source": [
+    "# We can use draw() to tell the viewer to draw the box at a specific\n",
+    "# position. tformtranslate() creates an AffineTransform corresponding\n",
+    "# to the given x; y; z translation.\n",
     "draw(model, [tformtranslate([1;0;0])])"
    ]
   },
@@ -342,6 +371,7 @@
    },
    "outputs": [],
    "source": [
+    "# We can also rotate the model by sending a different AffineTransform\n",
     "draw(model, [tformrotate([0;0;1], pi/4)])"
    ]
   },
@@ -370,6 +400,17 @@
     }
    ],
    "source": [
+    "# Let's look more at what's being done under the hood. The model\n",
+    "# owns a reference to a Robot object. A Robot contains a list of \n",
+    "# Link objects. Each Link contains a list of GeometryData objects.\n",
+    "# And each GeometryData contains a single geometric primitive as\n",
+    "# well as information about its color and its position with\n",
+    "# respect to the link that contains it.\n",
+    "#\n",
+    "# Calling load() on a single geometry (the box above) results in \n",
+    "# a new Robot being automatically created. That Robot has one link,\n",
+    "# and that Link has one GeometryData whose geometry is the box we\n",
+    "# provided. \n",
     "model.robot"
    ]
   },
@@ -432,9 +473,7 @@
    },
    "outputs": [],
    "source": [
-    "green_box_data = GeometryData(box)\n",
-    "green_box_data.color = RGBA(0., 1, 0, 0.5)\n",
-    "model = load(green_box_data);"
+    "@assert model.robot.links[1].geometry_data[1].geometry === box"
    ]
   },
   {
@@ -445,50 +484,82 @@
    },
    "outputs": [],
    "source": [
-    "blue_box_data = GeometryData(box, tformtranslate([0;0;1.]), RGBA(0,0,1,0.5))\n",
-    "link1 = Link([green_box_data; blue_box_data], \"link1\")\n",
-    "model = load(link1);"
+    "# Now let's make some more complicated robots. We'll create a \n",
+    "# new GeometryData from the box, but color it green this time.\n",
+    "green_box_data = GeometryData(box)\n",
+    "green_box_data.color = RGBA(0., 1, 0, 0.5)\n",
+    "model = load(green_box_data);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "draw(model, [tformtranslate([0.75; 0; 0])])"
+    "# Now let's create a blue box\n",
+    "blue_box_data = GeometryData(box, tformtranslate([0;0;1.]), RGBA(0,0,1,0.5))\n",
+    "\n",
+    "# We can create a new Link that contains two geometries: the \n",
+    "# green box and the blue box. \n",
+    "link1 = Link([green_box_data; blue_box_data], \"link1\")\n",
+    "model = load(link1);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "red_box_data = GeometryData(box)\n",
-    "link2 = Link([red_box_data], \"link2\")\n",
-    "robot = Robot([link1; link2])\n",
-    "model = load(robot);"
+    "# And we can draw that new link wherever we like.\n",
+    "draw(model, [tformtranslate([0.75; 0; 0])])\n",
+    "\n",
+    "# Note that the green and blue boxes move together. That's\n",
+    "# because they are part of the same rigid link. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "draw(model, [tformtranslate([0.5; 0; 0]), tformtranslate([-0.5;0;0])])"
+    "# If we want different parts of our robot to move separately,\n",
+    "# they need to be on separate links. Let's create a second\n",
+    "# Link and then a robot containing both of those links. \n",
+    "red_box_data = GeometryData(box)\n",
+    "link2 = Link([red_box_data], \"link2\")\n",
+    "robot = Robot([link1; link2])\n",
+    "\n",
+    "# When we load this new robot, the two links are both drawn \n",
+    "# at position [0; 0; 0]; right on top of each other.\n",
+    "model = load(robot);\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Now that we have two links, we need to specify two transforms\n",
+    "# for the draw() command. The order of the transforms matches\n",
+    "# the order of the links in \"Robot([link1; link2])\"\n",
+    "draw(model, [tformtranslate([0.5; 0; 0]), tformtranslate([-0.5;0;0])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -519,15 +590,16 @@
        "nothing"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {
-      "comm_id": "442061f0-2f2f-4c56-bdda-4375d9569735",
+      "comm_id": "8cb6e70c-f82f-45f7-bde4-2d57f44407ab",
       "reactive": true
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# We can now move the two links independently\n",
     "@manipulate for x1 in linspace(0, 2), x2 in linspace(0, 2)\n",
     "    draw(model, [tformtranslate([x1; 0; 0]); tformtranslate([x2; 0; 0])])\n",
     "end"
@@ -535,36 +607,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Of course, we can draw much more interesting geometries than \n",
+    "# just simple boxes. Let's create a triangulated mesh by finding\n",
+    "# the 0-level set of some function. \n",
+    "# \n",
+    "# First, we'll define our function:\n",
+    "f = x -> norm(x)^2 - abs(sin(atan2(x[2], x[1])))\n",
+    "\n",
+    "# Then we sample that function within the volume from \n",
+    "# [-1; -1; -1] to [1; 1; 1]\n",
+    "sdf = SignedDistanceField(f, HyperRectangle(Vec(-1.,-1,-1), Vec(2.,2,2)))\n",
+    "\n",
+    "# Next we find a mesh describing the 0-level set of that function\n",
+    "# using the marching tetrahedra algorithm\n",
+    "mesh = HomogenousMesh(sdf)\n",
+    "\n",
+    "# And we can now load that mesh into the visualizer\n",
+    "model = load(mesh);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [],
+      "text/plain": [
+       "Interact.Slider{Float64}(Signal{Float64}(-0.02040816326530612, nactions=0),\"iso_level\",-0.02040816326530612,linspace(-1.0,1.0,50),true)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/plain": [
        "DrakeVisualizer.VisualizerModel(DrakeVisualizer.Robot([DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
-       "    vertices: 5582xFixedSizeArrays.Point{3,Float64},     faces: 11160xGeometryTypes.Face{3,Int64,0}, )\n",
+       "    vertices: 4900xFixedSizeArrays.Point{3,Float64},     faces: 9792xGeometryTypes.Face{3,Int64,0}, )\n",
        ",AffineTransforms.AffineTransform{Float64,3}:\n",
        "matrix: 3x3 Array{Float64,2}:\n",
        " 1.0  0.0  0.0\n",
        " 0.0  1.0  0.0\n",
        " 0.0  0.0  1.0\n",
        "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x3135ad780>)),1)"
+       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x313e27930>)),1)"
       ]
      },
-     "execution_count": 15,
-     "metadata": {},
+     "execution_count": 17,
+     "metadata": {
+      "comm_id": "e19483bc-59a9-4457-bd11-e1bf18aa87cc",
+      "reactive": true
+     },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = x -> norm(x)^2 - 1\n",
-    "sdf = SignedDistanceField(f, HyperRectangle(Vec(-1.,-1,-1), Vec(2.,2,2)))\n",
-    "mesh = HomogenousMesh(sdf)\n",
-    "model = load(mesh)"
+    "# We can even manipulate the geometry by changing the function:\n",
+    "@manipulate for iso_level in linspace(-1, 1)\n",
+    "    f = x -> norm(x)^2 - abs(sin(atan2(x[2], x[1]))) - iso_level\n",
+    "    sdf = SignedDistanceField(f, HyperRectangle(Vec(-1.1,-1.1,-1.1), Vec(2.2,2.2,2.2)))\n",
+    "    mesh = HomogenousMesh(sdf)\n",
+    "    model = load(mesh);\n",
+    "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
