--- a/demo.ipynb
+++ b/demo.ipynb
@@ -592,7 +592,7 @@
      },
      "execution_count": 15,
      "metadata": {
-      "comm_id": "8cb6e70c-f82f-45f7-bde4-2d57f44407ab",
+      "comm_id": "f155acbd-c8f5-4efd-865e-66d7bb1b61fb",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -660,12 +660,12 @@
        " 0.0  1.0  0.0\n",
        " 0.0  0.0  1.0\n",
        "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x313e27930>)),1)"
+       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x3135acde0>)),1)"
       ]
      },
      "execution_count": 17,
      "metadata": {
-      "comm_id": "e19483bc-59a9-4457-bd11-e1bf18aa87cc",
+      "comm_id": "ce24f945-3477-4230-bf0e-07381fda532e",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
