--- a/demo.ipynb
+++ b/demo.ipynb
@@ -592,7 +592,7 @@
      },
      "execution_count": 15,
      "metadata": {
-      "comm_id": "f155acbd-c8f5-4efd-865e-66d7bb1b61fb",
+      "comm_id": "18c32074-9c30-4b3e-9169-d0febcb51361",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -660,12 +660,12 @@
        " 0.0  1.0  0.0\n",
        " 0.0  0.0  1.0\n",
        "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x3135acde0>)),1)"
+       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x31e60ede0>)),1)"
       ]
      },
      "execution_count": 17,
      "metadata": {
-      "comm_id": "ce24f945-3477-4230-bf0e-07381fda532e",
+      "comm_id": "18c826ef-0433-423e-bda3-78a74db4b572",
       "reactive": true
      },
      "output_type": "execute_result"
