--- a/demo.ipynb
+++ b/demo.ipynb
@@ -26,277 +26,13 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<script charset=\"utf-8\">(function ($, undefined) {\n",
-       "\n",
-       "    function createElem(tag, attr, content) {\n",
-       "\t// TODO: remove jQuery dependency\n",
-       "\tvar el = $(\"<\" + tag + \"/>\").attr(attr);\n",
-       "\tif (content) {\n",
-       "\t    el.append(content);\n",
-       "\t}\n",
-       "\treturn el[0];\n",
-       "    }\n",
-       "\n",
-       "    // A widget must expose an id field which identifies it to the backend,\n",
-       "    // an elem attribute which is will be added to the DOM, and\n",
-       "    // a getState() method which returns the value to be sent to the backend\n",
-       "    // a sendUpdate() method which sends its current value to the backend\n",
-       "    var Widget = {\n",
-       "\tid: undefined,\n",
-       "\telem: undefined,\n",
-       "\tlabel: undefined,\n",
-       "\tgetState: function () {\n",
-       "\t    return this.elem.value;\n",
-       "\t},\n",
-       "\tsendUpdate: undefined\n",
-       "    };\n",
-       "\n",
-       "    var Slider = function (typ, id, init) {\n",
-       "\tvar attr = { type:  \"range\",\n",
-       "\t\t     value: init.value,\n",
-       "\t\t     min:   init.min,\n",
-       "\t\t     max:   init.max,\n",
-       "\t\t     step:  init.step },\n",
-       "\t    elem = createElem(\"input\", attr),\n",
-       "\t    self = this;\n",
-       "\n",
-       "\telem.onchange = function () {\n",
-       "\t    self.sendUpdate();\n",
-       "\t}\n",
-       "\n",
-       "\tthis.id = id;\n",
-       "\tthis.elem = elem;\n",
-       "\tthis.label = init.label;\n",
-       "\n",
-       "\tInputWidgets.commInitializer(this); // Initialize communication\n",
-       "    }\n",
-       "    Slider.prototype = Widget;\n",
-       "\n",
-       "    var Checkbox = function (typ, id, init) {\n",
-       "\tvar attr = { type: \"checkbox\",\n",
-       "\t\t     checked: init.value },\n",
-       "\t    elem = createElem(\"input\", attr),\n",
-       "\t    self = this;\n",
-       "\n",
-       "\tthis.getState = function () {\n",
-       "\t    return elem.checked;\n",
-       "\t}\n",
-       "\telem.onchange = function () {\n",
-       "\t    self.sendUpdate();\n",
-       "\t}\n",
-       "\n",
-       "\tthis.id = id;\n",
-       "\tthis.elem = elem;\n",
-       "\tthis.label = init.label;\n",
-       "\n",
-       "\tInputWidgets.commInitializer(this);\n",
-       "    }\n",
-       "    Checkbox.prototype = Widget;\n",
-       "\n",
-       "    var Button = function (typ, id, init) {\n",
-       "\tvar attr = { type:    \"button\",\n",
-       "\t\t     value:   init.label },\n",
-       "\t    elem = createElem(\"input\", attr),\n",
-       "\t    self = this;\n",
-       "\tthis.getState = function () {\n",
-       "\t    return null;\n",
-       "\t}\n",
-       "\telem.onclick = function () {\n",
-       "\t    self.sendUpdate();\n",
-       "\t}\n",
-       "\n",
-       "\tthis.id = id;\n",
-       "\tthis.elem = elem;\n",
-       "\tthis.label = init.label;\n",
-       "\n",
-       "\tInputWidgets.commInitializer(this);\n",
-       "    }\n",
-       "    Button.prototype = Widget;\n",
-       "\n",
-       "    var Text = function (typ, id, init) {\n",
-       "\tvar attr = { type:  \"text\",\n",
-       "\t\t     placeholder: init.label,\n",
-       "\t\t     value: init.value },\n",
-       "\t    elem = createElem(\"input\", attr),\n",
-       "\t    self = this;\n",
-       "\tthis.getState = function () {\n",
-       "\t    return elem.value;\n",
-       "\t}\n",
-       "\telem.onkeyup = function () {\n",
-       "\t    self.sendUpdate();\n",
-       "\t}\n",
-       "\n",
-       "\tthis.id = id;\n",
-       "\tthis.elem = elem;\n",
-       "\tthis.label = init.label;\n",
-       "\n",
-       "\tInputWidgets.commInitializer(this);\n",
-       "    }\n",
-       "    Text.prototype = Widget;\n",
-       "\n",
-       "    var Textarea = function (typ, id, init) {\n",
-       "\tvar attr = { placeholder: init.label },\n",
-       "\t    elem = createElem(\"textarea\", attr, init.value),\n",
-       "\t    self = this;\n",
-       "\tthis.getState = function () {\n",
-       "\t    return elem.value;\n",
-       "\t}\n",
-       "\telem.onchange = function () {\n",
-       "\t    self.sendUpdate();\n",
-       "\t}\n",
-       "\n",
-       "\tthis.id = id;\n",
-       "\tthis.elem = elem;\n",
-       "\tthis.label = init.label;\n",
-       "\n",
-       "\tInputWidgets.commInitializer(this);\n",
-       "    }\n",
-       "    Textarea.prototype = Widget;\n",
-       "\n",
-       "    // RadioButtons\n",
-       "    // Dropdown\n",
-       "    // HTML\n",
-       "    // Latex\n",
-       "\n",
-       "    var InputWidgets = {\n",
-       "\tSlider: Slider,\n",
-       "\tCheckbox: Checkbox,\n",
-       "\tButton: Button,\n",
-       "\tText: Text,\n",
-       "\tTextarea: Textarea,\n",
-       "\tdebug: false,\n",
-       "\tlog: function () {\n",
-       "\t    if (InputWidgets.debug) {\n",
-       "\t\tconsole.log.apply(console, arguments);\n",
-       "\t    }\n",
-       "\t},\n",
-       "\t// a central way to initalize communication\n",
-       "\t// for widgets.\n",
-       "\tcommInitializer: function (widget) {\n",
-       "\t    widget.sendUpdate = function () {};\n",
-       "\t}\n",
-       "    };\n",
-       "\n",
-       "    window.InputWidgets = InputWidgets;\n",
-       "\n",
-       "})(jQuery, undefined);\n",
-       "</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"interact-js-shim\">\n",
-       "    <script charset=\"utf-8\">\n",
-       "(function (IPython, $, _, MathJax, Widgets) {\n",
-       "    $.event.special.destroyed = {\n",
-       "\tremove: function(o) {\n",
-       "\t    if (o.handler) {\n",
-       "\t\to.handler.apply(this, arguments)\n",
-       "\t    }\n",
-       "\t}\n",
-       "    }\n",
-       "\n",
-       "    var OutputArea = IPython.version >= \"4.0.0\" ? require(\"notebook/js/outputarea\").OutputArea : IPython.OutputArea;\n",
-       "\n",
-       "    var redrawValue = function (container, type, val) {\n",
-       "\tvar selector = $(\"<div/>\");\n",
-       "\tvar oa = new OutputArea(_.extend(selector, {\n",
-       "\t    selector: selector,\n",
-       "\t    prompt_area: true,\n",
-       "\t    events: IPython.events,\n",
-       "\t    keyboard_manager: IPython.keyboard_manager\n",
-       "\t})); // Hack to work with IPython 2.1.0\n",
-       "\n",
-       "\tswitch (type) {\n",
-       "\tcase \"image/png\":\n",
-       "            var _src = 'data:' + type + ';base64,' + val;\n",
-       "\t    $(container).find(\"img\").attr('src', _src);\n",
-       "\t    break;\n",
-       "\tdefault:\n",
-       "\t    var toinsert = OutputArea.append_map[type].apply(\n",
-       "\t\toa, [val, {}, selector]\n",
-       "\t    );\n",
-       "\t    $(container).empty().append(toinsert.contents());\n",
-       "\t    selector.remove();\n",
-       "\t}\n",
-       "\tif (type === \"text/latex\" && MathJax) {\n",
-       "\t    MathJax.Hub.Queue([\"Typeset\", MathJax.Hub, toinsert.get(0)]);\n",
-       "\t}\n",
-       "    }\n",
-       "\n",
-       "\n",
-       "    $(document).ready(function() {\n",
-       "\tWidgets.debug = false; // log messages etc in console.\n",
-       "\tfunction initComm(evt, data) {\n",
-       "\t    var comm_manager = data.kernel.comm_manager;\n",
-       "        //_.extend(comm_manager.targets, require(\"widgets/js/widget\"))\n",
-       "\t    comm_manager.register_target(\"Signal\", function (comm) {\n",
-       "            comm.on_msg(function (msg) {\n",
-       "                //Widgets.log(\"message received\", msg);\n",
-       "                var val = msg.content.data.value;\n",
-       "                $(\".signal-\" + comm.comm_id).each(function() {\n",
-       "                var type = $(this).data(\"type\");\n",
-       "                if (val[type]) {\n",
-       "                    redrawValue(this, type, val[type], type);\n",
-       "                }\n",
-       "                });\n",
-       "                delete val;\n",
-       "                delete msg.content.data.value;\n",
-       "            });\n",
-       "\t    });\n",
-       "\n",
-       "\t    // coordingate with Comm and redraw Signals\n",
-       "\t    // XXX: Test using Reactive here to improve performance\n",
-       "\t    $([IPython.events]).on(\n",
-       "\t\t'output_appended.OutputArea', function (event, type, value, md, toinsert) {\n",
-       "\t\t    if (md && md.reactive) {\n",
-       "                // console.log(md.comm_id);\n",
-       "                toinsert.addClass(\"signal-\" + md.comm_id);\n",
-       "                toinsert.data(\"type\", type);\n",
-       "                // Signal back indicating the mimetype required\n",
-       "                var comm_manager = IPython.notebook.kernel.comm_manager;\n",
-       "                var comm = comm_manager.comms[md.comm_id];\n",
-       "                comm.then(function (c) {\n",
-       "                    c.send({action: \"subscribe_mime\",\n",
-       "                       mime: type});\n",
-       "                    toinsert.bind(\"destroyed\", function() {\n",
-       "                        c.send({action: \"unsubscribe_mime\",\n",
-       "                               mime: type});\n",
-       "                    });\n",
-       "                })\n",
-       "\t\t    }\n",
-       "\t    });\n",
-       "\t}\n",
-       "\n",
-       "\ttry {\n",
-       "\t    // try to initialize right away. otherwise, wait on the status_started event.\n",
-       "\t    initComm(undefined, IPython.notebook);\n",
-       "\t} catch (e) {\n",
-       "\t    $([IPython.events]).on('kernel_created.Kernel kernel_created.Session', initComm);\n",
-       "\t}\n",
-       "    });\n",
-       "})(IPython, jQuery, _, MathJax, InputWidgets);\n",
-       "</script>\n",
-       "    <script>\n",
-       "        window.interactLoadedFlag = true\n",
-       "       $(\"#interact-js-shim\").bind(\"destroyed\", function () {\n",
-       "           if (window.interactLoadedFlag) {\n",
-       "               console.warn(\"JavaScript required by Interact will be removed if you remove this cell or run using Interact more than once.\")\n",
-       "           }\n",
-       "       })\n",
-       "       $([IPython.events]).on(\"kernel_starting.Kernel kernel_restarting.Kernel\", function () { window.interactLoadedFlag = false })\n",
-       "   </script>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "LoadError",
+     "evalue": "LoadError: module DrakeVisualizer not found in current path; you should rm(\"/Users/rdeits/.julia/declarative/af436fcf2f98e2f612470aec5b00fca6/lib/v0.4/DrakeVisualizer.ji\") to remove the orphaned cache file\nwhile loading In[1], in expression starting on line 3",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: module DrakeVisualizer not found in current path; you should rm(\"/Users/rdeits/.julia/declarative/af436fcf2f98e2f612470aec5b00fca6/lib/v0.4/DrakeVisualizer.ji\") to remove the orphaned cache file\nwhile loading In[1], in expression starting on line 3",
+      ""
+     ]
     }
    ],
    "source": [
@@ -341,12 +77,12 @@
    },
    "outputs": [],
    "source": [
-    "# load() causes the viewer to spawn a geometry or a set of geometries. \n",
-    "# It returns a VisualizerModel, which includes all the information\n",
+    "# Visualizer() causes the viewer to spawn a geometry or a set of geometries. \n",
+    "# It returns a Visualizer, which includes all the information\n",
     "# about that loaded geometry. \n",
     "# Note that the model is initially loaded in the zero configuration \n",
     "# (that is, its position and rotation are all zeros)\n",
-    "model = load(box);"
+    "model = Visualizer(box);"
    ]
   },
   {
@@ -407,7 +143,7 @@
     "# well as information about its color and its position with\n",
     "# respect to the link that contains it.\n",
     "#\n",
-    "# Calling load() on a single geometry (the box above) results in \n",
+    "# Calling Visualizer() on a single geometry (the box above) results in \n",
     "# a new Robot being automatically created. That Robot has one link,\n",
     "# and that Link has one GeometryData whose geometry is the box we\n",
     "# provided. \n",
@@ -488,7 +224,7 @@
     "# new GeometryData from the box, but color it green this time.\n",
     "green_box_data = GeometryData(box)\n",
     "green_box_data.color = RGBA(0., 1, 0, 0.5)\n",
-    "model = load(green_box_data);"
+    "model = Visualizer(green_box_data);"
    ]
   },
   {
@@ -505,7 +241,7 @@
     "# We can create a new Link that contains two geometries: the \n",
     "# green box and the blue box. \n",
     "link1 = Link([green_box_data; blue_box_data], \"link1\")\n",
-    "model = load(link1);"
+    "model = Visualizer(link1);"
    ]
   },
   {
@@ -540,7 +276,7 @@
     "\n",
     "# When we load this new robot, the two links are both drawn \n",
     "# at position [0; 0; 0]; right on top of each other.\n",
-    "model = load(robot);\n"
+    "model = Visualizer(robot);\n"
    ]
   },
   {
@@ -629,7 +365,7 @@
     "mesh = HomogenousMesh(sdf)\n",
     "\n",
     "# And we can now load that mesh into the visualizer\n",
-    "model = load(mesh);"
+    "model = Visualizer(mesh);"
    ]
   },
   {
@@ -677,7 +413,7 @@
     "    f = x -> norm(x)^2 - abs(sin(atan2(x[2], x[1]))) - iso_level\n",
     "    sdf = SignedDistanceField(f, HyperRectangle(Vec(-1.1,-1.1,-1.1), Vec(2.2,2.2,2.2)))\n",
     "    mesh = HomogenousMesh(sdf)\n",
-    "    model = load(mesh);\n",
+    "    model = Visualizer(mesh);\n",
     "end"
    ]
   },
