--- a/demo.ipynb
+++ b/demo.ipynb
@@ -26,13 +26,284 @@
    },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "LoadError: module DrakeVisualizer not found in current path; you should rm(\"/Users/rdeits/.julia/declarative/af436fcf2f98e2f612470aec5b00fca6/lib/v0.4/DrakeVisualizer.ji\") to remove the orphaned cache file\nwhile loading In[1], in expression starting on line 3",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: module DrakeVisualizer not found in current path; you should rm(\"/Users/rdeits/.julia/declarative/af436fcf2f98e2f612470aec5b00fca6/lib/v0.4/DrakeVisualizer.ji\") to remove the orphaned cache file\nwhile loading In[1], in expression starting on line 3",
-      ""
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Recompiling stale cache file /Users/rdeits/.julia/lib/v0.4/Reactive.ji for module Reactive.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script charset=\"utf-8\">(function ($, undefined) {\n",
+       "\n",
+       "    function createElem(tag, attr, content) {\n",
+       "\t// TODO: remove jQuery dependency\n",
+       "\tvar el = $(\"<\" + tag + \"/>\").attr(attr);\n",
+       "\tif (content) {\n",
+       "\t    el.append(content);\n",
+       "\t}\n",
+       "\treturn el[0];\n",
+       "    }\n",
+       "\n",
+       "    // A widget must expose an id field which identifies it to the backend,\n",
+       "    // an elem attribute which is will be added to the DOM, and\n",
+       "    // a getState() method which returns the value to be sent to the backend\n",
+       "    // a sendUpdate() method which sends its current value to the backend\n",
+       "    var Widget = {\n",
+       "\tid: undefined,\n",
+       "\telem: undefined,\n",
+       "\tlabel: undefined,\n",
+       "\tgetState: function () {\n",
+       "\t    return this.elem.value;\n",
+       "\t},\n",
+       "\tsendUpdate: undefined\n",
+       "    };\n",
+       "\n",
+       "    var Slider = function (typ, id, init) {\n",
+       "\tvar attr = { type:  \"range\",\n",
+       "\t\t     value: init.value,\n",
+       "\t\t     min:   init.min,\n",
+       "\t\t     max:   init.max,\n",
+       "\t\t     step:  init.step },\n",
+       "\t    elem = createElem(\"input\", attr),\n",
+       "\t    self = this;\n",
+       "\n",
+       "\telem.onchange = function () {\n",
+       "\t    self.sendUpdate();\n",
+       "\t}\n",
+       "\n",
+       "\tthis.id = id;\n",
+       "\tthis.elem = elem;\n",
+       "\tthis.label = init.label;\n",
+       "\n",
+       "\tInputWidgets.commInitializer(this); // Initialize communication\n",
+       "    }\n",
+       "    Slider.prototype = Widget;\n",
+       "\n",
+       "    var Checkbox = function (typ, id, init) {\n",
+       "\tvar attr = { type: \"checkbox\",\n",
+       "\t\t     checked: init.value },\n",
+       "\t    elem = createElem(\"input\", attr),\n",
+       "\t    self = this;\n",
+       "\n",
+       "\tthis.getState = function () {\n",
+       "\t    return elem.checked;\n",
+       "\t}\n",
+       "\telem.onchange = function () {\n",
+       "\t    self.sendUpdate();\n",
+       "\t}\n",
+       "\n",
+       "\tthis.id = id;\n",
+       "\tthis.elem = elem;\n",
+       "\tthis.label = init.label;\n",
+       "\n",
+       "\tInputWidgets.commInitializer(this);\n",
+       "    }\n",
+       "    Checkbox.prototype = Widget;\n",
+       "\n",
+       "    var Button = function (typ, id, init) {\n",
+       "\tvar attr = { type:    \"button\",\n",
+       "\t\t     value:   init.label },\n",
+       "\t    elem = createElem(\"input\", attr),\n",
+       "\t    self = this;\n",
+       "\tthis.getState = function () {\n",
+       "\t    return null;\n",
+       "\t}\n",
+       "\telem.onclick = function () {\n",
+       "\t    self.sendUpdate();\n",
+       "\t}\n",
+       "\n",
+       "\tthis.id = id;\n",
+       "\tthis.elem = elem;\n",
+       "\tthis.label = init.label;\n",
+       "\n",
+       "\tInputWidgets.commInitializer(this);\n",
+       "    }\n",
+       "    Button.prototype = Widget;\n",
+       "\n",
+       "    var Text = function (typ, id, init) {\n",
+       "\tvar attr = { type:  \"text\",\n",
+       "\t\t     placeholder: init.label,\n",
+       "\t\t     value: init.value },\n",
+       "\t    elem = createElem(\"input\", attr),\n",
+       "\t    self = this;\n",
+       "\tthis.getState = function () {\n",
+       "\t    return elem.value;\n",
+       "\t}\n",
+       "\telem.onkeyup = function () {\n",
+       "\t    self.sendUpdate();\n",
+       "\t}\n",
+       "\n",
+       "\tthis.id = id;\n",
+       "\tthis.elem = elem;\n",
+       "\tthis.label = init.label;\n",
+       "\n",
+       "\tInputWidgets.commInitializer(this);\n",
+       "    }\n",
+       "    Text.prototype = Widget;\n",
+       "\n",
+       "    var Textarea = function (typ, id, init) {\n",
+       "\tvar attr = { placeholder: init.label },\n",
+       "\t    elem = createElem(\"textarea\", attr, init.value),\n",
+       "\t    self = this;\n",
+       "\tthis.getState = function () {\n",
+       "\t    return elem.value;\n",
+       "\t}\n",
+       "\telem.onchange = function () {\n",
+       "\t    self.sendUpdate();\n",
+       "\t}\n",
+       "\n",
+       "\tthis.id = id;\n",
+       "\tthis.elem = elem;\n",
+       "\tthis.label = init.label;\n",
+       "\n",
+       "\tInputWidgets.commInitializer(this);\n",
+       "    }\n",
+       "    Textarea.prototype = Widget;\n",
+       "\n",
+       "    // RadioButtons\n",
+       "    // Dropdown\n",
+       "    // HTML\n",
+       "    // Latex\n",
+       "\n",
+       "    var InputWidgets = {\n",
+       "\tSlider: Slider,\n",
+       "\tCheckbox: Checkbox,\n",
+       "\tButton: Button,\n",
+       "\tText: Text,\n",
+       "\tTextarea: Textarea,\n",
+       "\tdebug: false,\n",
+       "\tlog: function () {\n",
+       "\t    if (InputWidgets.debug) {\n",
+       "\t\tconsole.log.apply(console, arguments);\n",
+       "\t    }\n",
+       "\t},\n",
+       "\t// a central way to initalize communication\n",
+       "\t// for widgets.\n",
+       "\tcommInitializer: function (widget) {\n",
+       "\t    widget.sendUpdate = function () {};\n",
+       "\t}\n",
+       "    };\n",
+       "\n",
+       "    window.InputWidgets = InputWidgets;\n",
+       "\n",
+       "})(jQuery, undefined);\n",
+       "</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"interact-js-shim\">\n",
+       "    <script charset=\"utf-8\">\n",
+       "(function (IPython, $, _, MathJax, Widgets) {\n",
+       "    $.event.special.destroyed = {\n",
+       "\tremove: function(o) {\n",
+       "\t    if (o.handler) {\n",
+       "\t\to.handler.apply(this, arguments)\n",
+       "\t    }\n",
+       "\t}\n",
+       "    }\n",
+       "\n",
+       "    var OutputArea = IPython.version >= \"4.0.0\" ? require(\"notebook/js/outputarea\").OutputArea : IPython.OutputArea;\n",
+       "\n",
+       "    var redrawValue = function (container, type, val) {\n",
+       "\tvar selector = $(\"<div/>\");\n",
+       "\tvar oa = new OutputArea(_.extend(selector, {\n",
+       "\t    selector: selector,\n",
+       "\t    prompt_area: true,\n",
+       "\t    events: IPython.events,\n",
+       "\t    keyboard_manager: IPython.keyboard_manager\n",
+       "\t})); // Hack to work with IPython 2.1.0\n",
+       "\n",
+       "\tswitch (type) {\n",
+       "\tcase \"image/png\":\n",
+       "            var _src = 'data:' + type + ';base64,' + val;\n",
+       "\t    $(container).find(\"img\").attr('src', _src);\n",
+       "\t    break;\n",
+       "\tdefault:\n",
+       "\t    var toinsert = OutputArea.append_map[type].apply(\n",
+       "\t\toa, [val, {}, selector]\n",
+       "\t    );\n",
+       "\t    $(container).empty().append(toinsert.contents());\n",
+       "\t    selector.remove();\n",
+       "\t}\n",
+       "\tif (type === \"text/latex\" && MathJax) {\n",
+       "\t    MathJax.Hub.Queue([\"Typeset\", MathJax.Hub, toinsert.get(0)]);\n",
+       "\t}\n",
+       "    }\n",
+       "\n",
+       "\n",
+       "    $(document).ready(function() {\n",
+       "\tWidgets.debug = false; // log messages etc in console.\n",
+       "\tfunction initComm(evt, data) {\n",
+       "\t    var comm_manager = data.kernel.comm_manager;\n",
+       "        //_.extend(comm_manager.targets, require(\"widgets/js/widget\"))\n",
+       "\t    comm_manager.register_target(\"Signal\", function (comm) {\n",
+       "            comm.on_msg(function (msg) {\n",
+       "                //Widgets.log(\"message received\", msg);\n",
+       "                var val = msg.content.data.value;\n",
+       "                $(\".signal-\" + comm.comm_id).each(function() {\n",
+       "                var type = $(this).data(\"type\");\n",
+       "                if (val[type]) {\n",
+       "                    redrawValue(this, type, val[type], type);\n",
+       "                }\n",
+       "                });\n",
+       "                delete val;\n",
+       "                delete msg.content.data.value;\n",
+       "            });\n",
+       "\t    });\n",
+       "\n",
+       "\t    // coordingate with Comm and redraw Signals\n",
+       "\t    // XXX: Test using Reactive here to improve performance\n",
+       "\t    $([IPython.events]).on(\n",
+       "\t\t'output_appended.OutputArea', function (event, type, value, md, toinsert) {\n",
+       "\t\t    if (md && md.reactive) {\n",
+       "                // console.log(md.comm_id);\n",
+       "                toinsert.addClass(\"signal-\" + md.comm_id);\n",
+       "                toinsert.data(\"type\", type);\n",
+       "                // Signal back indicating the mimetype required\n",
+       "                var comm_manager = IPython.notebook.kernel.comm_manager;\n",
+       "                var comm = comm_manager.comms[md.comm_id];\n",
+       "                comm.then(function (c) {\n",
+       "                    c.send({action: \"subscribe_mime\",\n",
+       "                       mime: type});\n",
+       "                    toinsert.bind(\"destroyed\", function() {\n",
+       "                        c.send({action: \"unsubscribe_mime\",\n",
+       "                               mime: type});\n",
+       "                    });\n",
+       "                })\n",
+       "\t\t    }\n",
+       "\t    });\n",
+       "\t}\n",
+       "\n",
+       "\ttry {\n",
+       "\t    // try to initialize right away. otherwise, wait on the status_started event.\n",
+       "\t    initComm(undefined, IPython.notebook);\n",
+       "\t} catch (e) {\n",
+       "\t    $([IPython.events]).on('kernel_created.Kernel kernel_created.Session', initComm);\n",
+       "\t}\n",
+       "    });\n",
+       "})(IPython, jQuery, _, MathJax, InputWidgets);\n",
+       "</script>\n",
+       "    <script>\n",
+       "        window.interactLoadedFlag = true\n",
+       "       $(\"#interact-js-shim\").bind(\"destroyed\", function () {\n",
+       "           if (window.interactLoadedFlag) {\n",
+       "               console.warn(\"JavaScript required by Interact will be removed if you remove this cell or run using Interact more than once.\")\n",
+       "           }\n",
+       "       })\n",
+       "       $([IPython.events]).on(\"kernel_starting.Kernel kernel_restarting.Kernel\", function () { window.interactLoadedFlag = false })\n",
+       "   </script>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -328,7 +599,7 @@
      },
      "execution_count": 15,
      "metadata": {
-      "comm_id": "18c32074-9c30-4b3e-9169-d0febcb51361",
+      "comm_id": "e90258fd-499f-40ec-836e-acbb6adc45cc",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -388,7 +659,7 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.VisualizerModel(DrakeVisualizer.Robot([DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.Robot([DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
        "    vertices: 4900xFixedSizeArrays.Point{3,Float64},     faces: 9792xGeometryTypes.Face{3,Int64,0}, )\n",
        ",AffineTransforms.AffineTransform{Float64,3}:\n",
        "matrix: 3x3 Array{Float64,2}:\n",
@@ -396,12 +667,12 @@
        " 0.0  1.0  0.0\n",
        " 0.0  0.0  1.0\n",
        "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x31e60ede0>)),1)"
+       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x31dbe0de0>))"
       ]
      },
      "execution_count": 17,
      "metadata": {
-      "comm_id": "18c826ef-0433-423e-bda3-78a74db4b572",
+      "comm_id": "47d03a79-3a3c-42c2-aa5a-9c79cdf7cf6d",
       "reactive": true
      },
      "output_type": "execute_result"
