don't define global const in __init__

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -26,13 +26,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Recompiling stale cache file /Users/rdeits/.julia/lib/v0.4/Reactive.ji for module Reactive.\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<script charset=\"utf-8\">(function ($, undefined) {\n",
@@ -327,7 +320,7 @@
     {
      "data": {
       "text/plain": [
-       "GeometryTypes.HyperRectangle{3,Float64}(FixedSizeArrays.Vec{3,Float64}((0.0,0.0,0.0)),FixedSizeArrays.Vec{3,Float64}((1.0,1.0,1.0)))"
+       "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
      "execution_count": 2,
@@ -392,7 +385,7 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Robot([DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(FixedSizeArrays.Vec{3,Float64}((0.0,0.0,0.0)),FixedSizeArrays.Vec{3,Float64}((1.0,1.0,1.0))),AffineTransforms.AffineTransform{Float64,3}:\n",
+       "DrakeVisualizer.Robot([DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),AffineTransforms.AffineTransform{Float64,3}:\n",
        "matrix: 3x3 Array{Float64,2}:\n",
        " 1.0  0.0  0.0\n",
        " 0.0  1.0  0.0\n",
@@ -432,7 +425,7 @@
      "data": {
       "text/plain": [
        "1-element Array{DrakeVisualizer.Link,1}:\n",
-       " DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(FixedSizeArrays.Vec{3,Float64}((0.0,0.0,0.0)),FixedSizeArrays.Vec{3,Float64}((1.0,1.0,1.0))),AffineTransforms.AffineTransform{Float64,3}:\n",
+       " DrakeVisualizer.Link(DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{Float64,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),AffineTransforms.AffineTransform{Float64,3}:\n",
        "matrix: 3x3 Array{Float64,2}:\n",
        " 1.0  0.0  0.0\n",
        " 0.0  1.0  0.0\n",
@@ -460,7 +453,7 @@
     {
      "data": {
       "text/plain": [
-       "GeometryTypes.HyperRectangle{3,Float64}(FixedSizeArrays.Vec{3,Float64}((0.0,0.0,0.0)),FixedSizeArrays.Vec{3,Float64}((1.0,1.0,1.0)))"
+       "GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0))"
       ]
      },
      "execution_count": 8,
@@ -599,7 +592,7 @@
      },
      "execution_count": 15,
      "metadata": {
-      "comm_id": "e90258fd-499f-40ec-836e-acbb6adc45cc",
+      "comm_id": "8717b48f-80f2-49e5-8cac-75a47ec80b42",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -667,12 +660,12 @@
        " 0.0  1.0  0.0\n",
        " 0.0  0.0  1.0\n",
        "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x31dbe0de0>))"
+       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f4d84759450>))"
       ]
      },
      "execution_count": 17,
      "metadata": {
-      "comm_id": "47d03a79-3a3c-42c2-aa5a-9c79cdf7cf6d",
+      "comm_id": "f17ea2bd-05a8-410c-a55c-98c18be14de0",
       "reactive": true
      },
      "output_type": "execute_result"
