define an ellipsoid type and its drawing functions

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -592,7 +592,7 @@
      },
      "execution_count": 15,
      "metadata": {
-      "comm_id": "8717b48f-80f2-49e5-8cac-75a47ec80b42",
+      "comm_id": "e4de71ca-18cb-4679-bc47-d018a46317b0",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -660,12 +660,12 @@
        " 0.0  1.0  0.0\n",
        " 0.0  0.0  1.0\n",
        "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f4d84759450>))"
+       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f19ef0c8750>))"
       ]
      },
      "execution_count": 17,
      "metadata": {
-      "comm_id": "f17ea2bd-05a8-410c-a55c-98c18be14de0",
+      "comm_id": "ed4a7d4b-8b81-4cff-8b6c-cfc5866df6ef",
       "reactive": true
      },
      "output_type": "execute_result"
