--- a/demo.ipynb
+++ b/demo.ipynb
@@ -592,7 +592,7 @@
      },
      "execution_count": 15,
      "metadata": {
-      "comm_id": "e4de71ca-18cb-4679-bc47-d018a46317b0",
+      "comm_id": "f6754303-71e9-4107-bc2d-e44ef458b2aa",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -660,12 +660,12 @@
        " 0.0  1.0  0.0\n",
        " 0.0  0.0  1.0\n",
        "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7f19ef0c8750>))"
+       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7fd43fc166f0>))"
       ]
      },
      "execution_count": 17,
      "metadata": {
-      "comm_id": "ed4a7d4b-8b81-4cff-8b6c-cfc5866df6ef",
+      "comm_id": "0cb67e26-bfd2-4086-9d0a-8fbec1b474d5",
       "reactive": true
      },
      "output_type": "execute_result"
