--- a/demo.ipynb
+++ b/demo.ipynb
@@ -592,7 +592,7 @@
      },
      "execution_count": 15,
      "metadata": {
-      "comm_id": "f6754303-71e9-4107-bc2d-e44ef458b2aa",
+      "comm_id": "b39de85d-27fd-425f-a10c-02863db54543",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -660,12 +660,12 @@
        " 0.0  1.0  0.0\n",
        " 0.0  0.0  1.0\n",
        "translation: [0.0,0.0,0.0]\n",
-       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x7fd43fc166f0>))"
+       ",RGBA{Float64}(1.0,0.0,0.0,0.5))],\"link\")]),1,PyLCM.LCM(PyObject <LCM object at 0x320526de0>))"
       ]
      },
      "execution_count": 17,
      "metadata": {
-      "comm_id": "0cb67e26-bfd2-4086-9d0a-8fbec1b474d5",
+      "comm_id": "b52b2192-6ebc-41bf-b6fb-44942f53ab6f",
       "reactive": true
      },
      "output_type": "execute_result"
